# google-search-console-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: tests.yml
agents/: gsc-backlinks.md  gsc-core-web-vitals.md  gsc-ctr-curve.md  gsc-overview.md  gsc-page-experience.md  gsc-pagespeed.md  gsc-search-analytics.md  gsc-sitemaps.md  gsc-structured-data.md  gsc-url-inspector.md
docs/: SETUP.md
examples/: sample-audit.md
scripts/: conftest.py  gsc_admin.py  gsc_audit.py  gsc_auth.py  gsc_backlinks.py  gsc_benchmarks.py  gsc_crux.py  gsc_data.py  gsc_page_experience.py  gsc_psi.py  gsc_report.py  gsc_structured_data.py  gsc_utils.py  requirements.txt  test_gsc_admin.py  test_gsc_audit.py  test_gsc_auth.py  test_gsc_backlinks.py  test_gsc_benchmarks.py  test_gsc_data.py  test_gsc_page_experience.py  test_gsc_report.py  test_gsc_structured_data.py  test_gsc_utils.py
skills/gsc/: SKILL.md
skills/gsc-audit/: SKILL.md
skills/gsc-backlinks/: SKILL.md
skills/gsc-core-web-vitals/: SKILL.md
skills/gsc-ctr-curve/: SKILL.md
skills/gsc-page-experience/: SKILL.md
skills/gsc-pagespeed/: SKILL.md
skills/gsc-search-analytics/: SKILL.md
skills/gsc-sitemaps/: SKILL.md
skills/gsc-structured-data/: SKILL.md
skills/gsc-url-inspect/: SKILL.md
