[project]
name = "google-search-console-agent"
version = "0.2.0"
description = "Multi-agent toolkit for Google Search Console, Core Web Vitals, and on-page diagnostics. Works with Claude Code, Codex, and Gemini CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "arcbaslow" }
]
dependencies = [
  "google-api-python-client>=2.100,<3",
  "google-auth>=2.25,<3",
  "google-auth-oauthlib>=1.2,<2",
  "jinja2>=3.1,<4"
]

[project.optional-dependencies]
pdf = [
  "weasyprint>=60,<70"
]
dev = [
  "pytest>=7.4,<9",
  "pytest-cov>=4.1,<6",
  "ruff>=0.1,<1"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["scripts"]
python_files = ["test_*.py"]
